--- a/sass/index.sass
+++ b/sass/index.sass
@@ -122,9 +122,9 @@ html, body
             transition: transform .2s linear
 
 .intro
-    padding: 570px 215px 122px 215px
+    padding: 570px 115px 122px 115px
     color: $white
-    background-image: url('/../assets/image/main_background.jpg')
+    background-image: url('../assets/image/main_background.jpg')
     background-size: cover
     box-shadow: inset 0 0 0 100vw $purple-background
     width: 100%
@@ -132,6 +132,7 @@ html, body
     &__wrapper
         max-width: 1400px
         margin: 0 auto
+        padding-left: 100px
     &__title
         font-size: 58px
         line-height: 70px
@@ -143,6 +144,8 @@ html, body
     @media (max-width: 1024px)
         padding-left: 50px
         padding-right: 50px
+        &__wrapper
+            padding-left: 0px
         .hide-br
             display: none
     @media (max-width: 768px)
@@ -191,6 +194,7 @@ html, body
         padding-right: 20px
         &__imgs
             grid-template-rows: repeat(4, 150px)
+            gap: 20px
     @media (max-width: 768px)
         padding-top: 40px
         padding-bottom: 40px 
@@ -199,10 +203,7 @@ html, body
     @media (max-width: 575px)
         &__imgs
             grid-template-areas: "A F" "A F" "A B" "D E" "C E" "C E"
-    @media (max-width: 320px)
-        &__imgs
-            grid-template-rows: repeat(6, 100px)
-            grid-template-areas: "A" "B" "C" "D" "E" "F"
+            gap: 10px
 
 .visually
     background-color: $gray-background
@@ -245,7 +246,6 @@ html, body
         font-weight: 700
         font-size: 14px
         text-transform: uppercase
-        letter-spacing: 2px
         padding-bottom: 11px
     &__info
         opacity: 70%
@@ -266,8 +266,8 @@ html, body
         &__video
             &_other
                 margin: 0
-        &__item
-            justify-content: space-around
+        .hide-br
+            display: none
     @media (max-width: 575px)
         &__item
             flex-direction: column
@@ -497,18 +497,13 @@ html, body
             pointer-events: auto
     &__close
         cursor: pointer
-        &:before, &:after 
-            content: ""
-            position: absolute
-            width: 24px
-            height: 4px
-            background: $white
-            right: 20px
-            top: 30px
-        &:before 
-            transform: rotate(45deg)
-        &:after
-            transform: rotate(-45deg)
+        position: fixed
+        top: 20px
+        right: 20px
+        width: 25px
+        height: 25px
+        stroke: $white
+        stroke-width: 2px
     &-login
         max-width: 570px
         color: rgba(255, 255, 255, 0.6)
@@ -583,10 +578,9 @@ html, body
             &__inputs
                 gap: 20px
                 padding-bottom: 20px
-        &__thanks
+            &__submit
+                padding: 12px 0px
+        &-thanks
             width: 90%
             height: auto
-            padding: 20px 20px
-    @media (max-width: 320px)
-        &-login
-            padding: 20px 20px
+            padding: 40px 40px
